--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,12 +1,9 @@
 name: Build, Deploy, and Update ASG
 on:
-  push:
-    tags: ["v[0-9]+\\.[0-9]+\\.[0-9]+"]
-    branches: ["development", "staging", "main"]
   workflow_dispatch:
     inputs:
       branch_name:
-        description: 'Branch to checkout (main or develop)'
+        description: 'Branch to checkout from Backend repo (main or develop)'
         required: true
         default: 'main'
         type: choice
@@ -78,18 +75,21 @@ jobs:
           path: target/*.jar
 
   build-artifact:
-   name: Build AMI
-   needs: compile-backend
-   runs-on: ubuntu-latest
-   outputs:
-    version_fingerprint: ${{ steps.hcp.outputs.version_fingerprint }}
-    ami_id: ${{ steps.ami.outputs.ami_id }}
-   if: github.event.inputs.run_update_asg_only != 'true' && github.event.inputs.use_default_ami != 'true'
-   steps:
-    - name: Checkout Repository
+    name: Build AMI
+    needs: compile-backend
+    runs-on: ubuntu-latest
+    outputs:
+           version_fingerprint: ${{ steps.hcp.outputs.version_fingerprint }}
+           ami_id: ${{ steps.ami.outputs.ami_id }}
+    if: github.event.inputs.run_update_asg_only != 'true' && github.event.inputs.use_default_ami != 'true'
+    steps:
+    - name: Checkout Backend Repository
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event.inputs.branch_name || github.ref }}
+        repository: ${{ env.BACKEND_REPO }}
+        ref: ${{ github.event.inputs.branch_name || 'main' }}
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
+
       
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
